fix button height to fit scale on smaller mobile screens

--- a/assets/scss/prom.scss
+++ b/assets/scss/prom.scss
@@ -43,6 +43,11 @@
       color: white;
       transition: all 0s;
     }
+    
+    @media screen and (max-height: 560px) { height: 2.25rem; }
+    @media screen and (max-height: 500px) { height: 2rem; }
+    @media screen and (max-height: 450px) { height: 1.75rem; }
+
   }
 }
 
